@@ -1,3 +1,10 @@
+2006-02-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/ambitus-engraver.cc (finalize): use grob_array. This fixes
+	ambitus lines.
+
+	* input/regression/beam-cross-staff-slope.ly: remove decrescendo.
+
 2006-02-22 Erik Sandberg  <mandolaerik@gmail.com>
 
 	* input/regression/: upgraded syntax for some files.
